# ksh

./: Cargo.toml  README.md  TODO.md  todo.txt
.cargo/: config.toml
scripts/: .gitignore  numbers.ksh  script.ksh  test.ksh
src/: main.rs
src/commands/: cd.rs  clear.rs  clock.rs  cp.rs  edit.rs  exec.rs  exit.rs  head.rs  help.rs  ls.rs  mkdir.rs  mv.rs  neofetch.rs  pwd.rs  read.rs  rm.rs  rmdir.rs  run.rs  tail.rs  touch.rs  wc.rs  write.rs
src/modules/: aliases.rs  command.rs  config.rs  directories.rs  display.rs  path.rs  systeminfo.rs  test.rs
