[package]
name = "ksh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
clearscreen = "2.0.1"
colored = "2.0.0"
conpty = "0.5.1"
crossterm = "0.26.1"
ctrlc = "3.3.0"
dirs = "5.0.1"
libc = "0.2.144"
raw-cpuid = { version = "11.0.1", features = ["cli"] }
serde = "1.0.163"
sys = "0.0.0"
sysinfo = "0.29.0"
term_size = "0.3.2"
text_io = "0.1.12"
toml = "0.7.4"
whoami = "1.4.0"
