[package]
name = "ksh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
clearscreen = "2.0.1"
crossterm = "0.26.1"
ctrlc = "3.3.0"
dirs = "5.0.1"
raw-cpuid = { version = "11.0.1", features = ["cli"] }
sys = "0.0.0"
sysinfo = "0.29.0"
term_size = "0.3.2"
text_io = "0.1.12"
whoami = "1.4.0"
